feat(auth): set up db, nextauth, middleware, ...

--- a/package.json
+++ b/package.json
@@ -6,16 +6,24 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "containers:rm": "docker compose rm -s -f -v",
+    "containers:up:d": "docker compose up -d",
+    "containers:up": "docker compose up",
+    "containers:restart": "yarn containers:rm && yarn containers:up",
+    "containers:restart:d": "yarn containers:rm && yarn containers:up:d"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
+    "mongoose": "^8.0.3",
     "next": "14.0.4",
+    "next-auth": "5.0.0-beta.3",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
