fix(auth): fix middlware, role based auth, types, error page, and .....

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 AUTH_SECRET=adonadjljlsaeaerr
 AUTH_URL=http://localhost:3000/api/auth
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=638615713633-98a67ejrrmoj37fsqb11a736rpmmbu86.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 MONGO_INITDB_ROOT_USERNAME=root
