fix(something): fix some things

--- a/.env
+++ b/.env
@@ -8,3 +8,6 @@ MONGO_INITDB_ROOT_USERNAME=root
 MONGO_INITDB_ROOT_PASSWORD=password
 DB_NAME=workdownBlog
 DB_HOST=localhost
+CLOUD_NAME=dudy7yx69
+API_KEY=225991186731667
+API_SECRET=m_kAOhM0VJMocfRZ9BXTB4weP2A
