--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "argon2": "^0.31.2",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^1.41.1",
     "clsx": "^2.0.0",
     "highlight.js": "^11.9.0",
     "lodash": "^4.17.21",
